# UA-ComputerGraphics-Engine

./: CMakeLists.txt  Figure.cpp  Figure.h  LICENSE  Light.h  Line2D.h  Projection.cpp  Projection.h  README.md  Transformations.cpp  Transformations.h  ZBuffer.cpp  ZBuffer.h  draw_triangulated_wireframes.cpp  draw_triangulated_wireframes.h  draw_zbuffered_wireframes.cpp  draw_zbuffered_wireframes.h  easy_image.cc  engine.cc  fractals3D.cpp  fractals3D.h  intro_exercises.cpp  intro_exercises.h  l_systems.cpp  l_systems.h  lijntekeningen3D.cpp  lijntekeningen3D.h  lineDrawer.cpp  lineDrawer.h
